sort into proper folder

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Login Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style_login.css">
   </head>
 
   <body>
@@ -45,6 +45,6 @@
       </div>
     </main>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/script_login.js"></script>
   </body>
 </html>
