--- a/login.html
+++ b/login.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Login Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
 
@@ -16,11 +19,11 @@
               <img src="images/img1.jpg" class="login-card-img">
             </div>
             <div class="col-md-7">
-              <div class="card-body">
+              <div class="card-body offset-2">
                 <div class="brand-wrapper ">
-                  <img src="images/img2.jpg" class="logo ">
+                  <a class="navbar-brand offset-2" href="Quizzical-1.mp4"><img src="Quizzical-1.png" class="rounded-pill" height="100px" width="170px"></a>
                 </div>
-                <p class="login-card-description">Log in to your account</p>
+                <p class="login-card-description offset-1" style="color:#3C4CAD;">Log in to your account</p>
                 <form action="#!">
                   <div class="form-group">
                     <label for="user" class="sr-only">User Name</label>
@@ -30,11 +33,11 @@
                     <label for="Password" class="sr-only">Password</label>
                     <input type="password" name="password" id="password" class="form-control" placeholder="**********">
                   </div>
-                  <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button" value="Login">
-                </form>
-                <a href="#!" class="forgot-password-link">Forgot password</a>
-                <p class="login-card-footer-text">Don't have an account? <a href="#!" class="text-reset">Register here</a></p>
-                <nav class="login-card-footer-nav">
+                <a class="btn btn-primary mb-3" href="main.html" target="_blank"
+                  role="button">Login</a>
+                <a href="#!" class="forgot-password-link offset-3">Forgot password</a>
+                <p class="login-card-footer-text offset-1" style="color:#3C4CAD;">Don't have an account? <a href="#!" class="text-reset">Register here</a></p>
+                <nav class="login-card-footer-nav offset-2">
                   <a href="#!">Terms of use.</a>
                   <a href="#!">Privacy policy</a>
                 </nav>
