--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top scrolling-navbar  ">
         <div class="container">
             <a  class="navbar-brand" href="#">  
-            <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"></a>
+            <video width="90" height="70" autoplay>
+             <source src="vd1.mp4" type="video/mp4"> </video>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
