--- a/login.html
+++ b/login.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Login Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style/style_login.css">
   </head>
-
   <body>
     <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
       <div class="container">
@@ -18,7 +19,7 @@
             <div class="col-md-7">
               <div class="card-body">
                 <div class="brand-wrapper ">
-                  <img src="images/img2.jpg" class="logo ">
+                  <img src="images/logo.png" class="rounded-pill" height="100px" width="170px">
                 </div>
                 <p class="login-card-description">Log in to your account</p>
                 <form action="#!">
@@ -45,6 +46,6 @@
       </div>
     </main>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/script_login.js"></script>
+    <script type="text/javascript" src="script/script_login.js"></script>
   </body>
 </html>
